--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Homework 12</title>
+   <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <load ="partials/header.html" />
+    <div class="container">
+      <form class="js-search-form" name="searchImageForm">
+        <input
+          class="form-control js-search-input"
+          type="text"
+          name="searchKeyword"
+          required
+          placeholder="Search images..."
+        />
+        <button class="btn" type="submit">Search</button>
+      </form>
+    </div>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+    <section class="gallery">
+      <div class="container js-container">
+        <div class="gallery-list js-gallery"></div>
+        <span class="loader js-loader is-hidden"></span>
+      </div>
     </section>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <button class="btn-load-more is-hidden" type="submit">Load more</button>
+    
     <script type="module" src="./main.js"></script>
   </body>
 </html>
